[gd_scene load_steps=13 format=2]

[ext_resource path="res://Main/Game.gd" type="Script" id=1]
[ext_resource path="res://Assets/Fonts/Big.tres" type="DynamicFont" id=2]
[ext_resource path="res://Assets/Fonts/menu.tres" type="DynamicFont" id=3]
[ext_resource path="res://Main/Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/Audio/SFX/explosion.wav" type="AudioStream" id=5]
[ext_resource path="res://Assets/white_texture.png" type="Texture" id=6]
[ext_resource path="res://Assets/Audio/SFX/powerUp.wav" type="AudioStream" id=7]
[ext_resource path="res://Assets/Audio/Music/game_music.wav" type="AudioStream" id=8]
[ext_resource path="res://Assets/Audio/SFX/explosion_snake.wav" type="AudioStream" id=9]
[ext_resource path="res://Assets/Audio/SFX/snake_weird.wav" type="AudioStream" id=10]
[ext_resource path="res://Main/GUI/PauseScene.tscn" type="PackedScene" id=11]

[sub_resource type="Environment" id=1]
background_mode = 4
glow_enabled = true
glow_bloom = 0.04
glow_blend_mode = 0

[node name="Game" type="Node2D"]
script = ExtResource( 1 )

[node name="bg" type="Sprite" parent="."]
modulate = Color( 0.0588235, 0.0588235, 0.0588235, 1 )
position = Vector2( 515.115, 302.528 )
scale = Vector2( 1.61647, 1.6948 )
texture = ExtResource( 6 )

[node name="Player" parent="." instance=ExtResource( 4 )]
position = Vector2( 562.734, 253.984 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 1 )

[node name="Container" type="Node2D" parent="." groups=[
"Container",
]]

[node name="GUILayer" type="CanvasLayer" parent="."]

[node name="HealthLabel" type="Label" parent="GUILayer"]
margin_right = 196.0
margin_bottom = 72.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 0.317647, 0.317647, 1 )
text = "Health: 5/5"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelLabel" type="Label" parent="GUILayer"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -196.0
margin_bottom = 72.0
custom_fonts/font = ExtResource( 2 )
text = "Health: 5/5"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeLabel" type="Label" parent="GUILayer"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -72.0
margin_right = 196.0
margin_bottom = 3.0
custom_fonts/font = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOverLabel" type="Label" parent="GUILayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 3 )
text = "Game Over"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseScene" parent="GUILayer" instance=ExtResource( 11 )]
visible = false

[node name="Sound" type="Node" parent="."]

[node name="ExplosionSound" type="AudioStreamPlayer" parent="Sound"]
stream = ExtResource( 5 )
bus = "SFX"

[node name="MoneySound" type="AudioStreamPlayer" parent="Sound"]
stream = ExtResource( 7 )
bus = "SFX"

[node name="PartExplosion" type="AudioStreamPlayer" parent="Sound"]
stream = ExtResource( 9 )
bus = "SFX"

[node name="SnakeSound" type="AudioStreamPlayer" parent="Sound"]
stream = ExtResource( 10 )
volume_db = -7.068
bus = "SFX"

[node name="GameMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
bus = "Music"
[connection signal="HealthUpdate" from="Player" to="." method="_on_Player_HealthUpdate"]
[connection signal="PlayerDead" from="Player" to="." method="_on_Player_PlayerDead"]
[connection signal="finished" from="GameMusic" to="." method="_on_GameMusic_finished"]
